--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,10 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+  font-family: system-ui, Helvetica, Arial, sans-serif;
+ line-height: 1;
 
   color-scheme: light dark;
-  color: rgb(119, 255, 0);
-  background-color: hsl(120, 100%, 56%);
+  color: #77ff00;
+  background-color: hsl(101, 58%, 71%);
 
 
   font-synthesis: none;
@@ -19,17 +18,36 @@
   display: table;
   width: 100%;
   height: 100vh;
-  padding: 100px 0;
-  color: white;
+  color: rgb(53, 24, 160);
   background: url("https://media.istockphoto.com/id/1317884919/pt/foto/soybean-growth-in-farm-with-green-leaf-background-agriculture-plant-seeding-growing-step.jpg?s=612x612&w=0&k=20&c=_F7mI_4uJHUvbXKjHQBmER671Sl0llvJlnrnSs6aV70=");
-  background-position: right;
+  background-position: center;
   background-size: contain;
 }
 
+.footer-endpage{
+  background-color: hsl(101, 58%, 71%);
+  color: rgb(53, 24, 160);
+  width: 100%;
+  display:table;
+  justify-content: center;
+  align-items: center;
+  height: 10vh; /* Ajuste a altura conforme necessário */
+}
+.footer-start {
+  background-color: hsla(0, 0%, 0%, 0.877);
+  color: rgb(255, 255, 255);
+  width: 100%;
+  display: table;
+  position:fixed;
+  justify-content: center;
+  align-items: center;
+  height: 5px; /* Ajuste a altura conforme necessário */
+}
 a {
-  font-weight: 500;
+  font-weight: 50;
   color: #00010a;
   text-decoration: inherit;
+  position: center;
 }
 a:hover {
   color: #535bf2;
@@ -44,8 +62,8 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  font-size: 2em;
+  line-height: 1;
 }
 
 button {
