--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
 :root {
   font-family: system-ui, Helvetica, Arial, sans-serif;
- line-height: 1;
+  line-height: 50;
 
   color-scheme: light dark;
-  color: #77ff00;
-  background-color: hsl(101, 58%, 71%);
+  color: #000000;
+  background-color: hsl(0, 0%, 0%);
 
 
   font-synthesis: none;
@@ -13,7 +13,16 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
-
+.footer-start {
+  background-color: hsla(0, 0%, 0%, 0.877);
+  color: rgb(255, 255, 255);
+  width: 100%;
+  display: table;
+  position:fixed;
+  justify-content: center;
+  align-items: center;
+  height: 10px; /* Ajuste a altura conforme necessário */
+}
 .background_muda {
   display: table;
   width: 100%;
@@ -25,32 +34,25 @@
 }
 
 .footer-endpage{
-  background-color: hsl(101, 58%, 71%);
-  color: rgb(53, 24, 160);
+  background-color: hsla(0, 0%, 0%, 0.925);
+  color: rgb(249, 249, 252);
   width: 100%;
   display:table;
+  position:bottom;
   justify-content: center;
   align-items: center;
-  height: 10vh; /* Ajuste a altura conforme necessário */
+  line-height: 2; /* Ajuste a altura conforme necessário */
 }
-.footer-start {
-  background-color: hsla(0, 0%, 0%, 0.877);
-  color: rgb(255, 255, 255);
-  width: 100%;
-  display: table;
-  position:fixed;
-  justify-content: center;
-  align-items: center;
-  height: 5px; /* Ajuste a altura conforme necessário */
-}
+
 a {
   font-weight: 50;
   color: #00010a;
   text-decoration: inherit;
   position: center;
+
 }
 a:hover {
-  color: #535bf2;
+  color: #000000;
 }
 
 body {
